fix safari cutoff icons in expense list

--- a/av_core/static-src/js/expense-manager/custom-expense-manager.scss
+++ b/av_core/static-src/js/expense-manager/custom-expense-manager.scss
@@ -4,4 +4,5 @@
   cursor: pointer;
   padding: 0.125rem 0.5rem 0.1875rem;
   color: $blue;
+  line-height: 1.1rem !important;
 }
